Removed ruler.enabled: false since it’s not a valid field in Loki’s runtime config. The ruler module is enabled by default in the backend target, and we’ve already configured it to use filesystem storage.

--- a/infra/addons/loki/values.yaml
+++ b/infra/addons/loki/values.yaml
@@ -65,10 +65,11 @@ loki:
           active_index_directory: /var/loki/data/tsdb-index
         filesystem:
           directory: /var/loki/chunks
-      compactor:
-        enabled: false
       ruler:
-        enabled: false
+        storage:
+          type: local
+          local:
+            directory: /var/loki/rules
 promtail:
   enabled: true
   config:
