--- a/infra/config/application.yaml
+++ b/infra/config/application.yaml
@@ -86,13 +86,51 @@ spec:
           values: |-
             app:
               environment: {{target.path.basename}}
-              nameOverride: {{app.path.basename}}
       destination:
         server: 'https://kubernetes.default.svc'
-        namespace: '{{app.path.dirname}}'
+        namespace: '{{app.path.basename}}'
       syncPolicy:
         automated:
-          prune: true
-          selfHeal: true
+          prune: false
+          selfHeal: false
         syncOptions:
           - CreateNamespace=true
+
+
+  #         - git:
+  #             pathParamPrefix: target
+  #             repoURL: https://github.com/Kapil-Bhalodiya/E-commerce-Platform.git
+  #             revision: main
+  #             directories:
+  #               - path: infra/config/*/app
+  #         - git:
+  #             pathParamPrefix: app
+  #             repoURL: https://github.com/Kapil-Bhalodiya/E-commerce-Platform.git
+  #             revision: main
+  #             files:
+  #               - path: infra/config/{{target.path.dirname}}/app/**/values.yaml
+  # template:
+  #   metadata:
+  #     name: '{{app.path.basename}}-{{target.path.dirname}}'
+  #   spec:
+  #     project: '{{target.project}}'
+  #     source:
+  #       repoURL: https://github.com/Kapil-Bhalodiya/E-commerce-Platform.git
+  #       targetRevision: main
+  #       path: 'addons/{{app.path.basename}}'
+  #       helm:
+  #         valueFiles:
+  #           - values.yaml
+  #           - '../../config/{{target.path.basename}}/values.yaml'
+  #           - '../../config/{{target.path.basename}}/{{app.path.basename}}/values.yaml'
+  #         values: |-
+  #           app:
+  #             environment: {{target.path.dirname}}
+  #             nameOverride: {{app.path.basename}}
+  #     destination:
+  #       server: '{{target.address}}'
+  #       namespace: '{{target.path.dirname}}'
+  #     syncPolicy:
+  #       automated:
+  #         prune: true
+  #         selfHeal: true
