let’s move the prometheusNodeExporter settings to the base values file

--- a/infra/config/application.yaml
+++ b/infra/config/application.yaml
@@ -88,7 +88,7 @@ spec:
               environment: {{target.path.basename}}
       destination:
         server: 'https://kubernetes.default.svc'
-        namespace: '{{app.path.dirname}}'
+        namespace: '{{target.path.basename}}'
       syncPolicy:
         automated:
           prune: false
