--- a/infra/addons/prometheus-stack/values.yaml
+++ b/infra/addons/prometheus-stack/values.yaml
@@ -22,7 +22,7 @@ prometheus:
             requests:
               storage: 10Gi
 grafana:
-  adminPassword: admin123
+  adminPassword: newpassword123
   persistence:
     enabled: true
     storageClassName: standard
@@ -51,3 +51,23 @@ grafana:
           spanEndTimeShift: "1h"
         tracesToMetrics:
           datasourceUid: "prometheus"
+prometheusNodeExporter:
+  hostNetwork: false
+  hostPort: false  # Explicitly disable host port
+  tolerations:
+    - key: "node-role.kubernetes.io/master"
+      operator: "Exists"
+      effect: "NoSchedule"
+    - key: "node-role.kubernetes.io/control-plane"
+      operator: "Exists"
+      effect: "NoSchedule"
+  service:
+    port: 9101
+    targetPort: 9101
+  port: 9101
+  extraArgs:
+    - --web.listen-address=:9101
+    - --collector.disable-defaults
+    - --collector.cpu
+    - --collector.memory
+    - --collector.diskstats
