--- a/infra/config/application.yaml
+++ b/infra/config/application.yaml
@@ -37,6 +37,28 @@ spec:
           values: |-
             app:
               environment: {{target.path.basename}}
+              {{- if eq .app.path.basename "prometheus-stack" }}
+              prometheusNodeExporter:
+                hostNetwork: false
+                hostPort: false
+                tolerations:
+                  - key: "node-role.kubernetes.io/master"
+                    operator: "Exists"
+                    effect: "NoSchedule"
+                  - key: "node-role.kubernetes.io/control-plane"
+                    operator: "Exists"
+                    effect: "NoSchedule"
+                service:
+                  port: 9101
+                  targetPort: 9101
+                port: 9101
+                extraArgs:
+                  - --web.listen-address=:9101
+                  - --collector.disable-defaults
+                  - --collector.cpu
+                  - --collector.memory
+                  - --collector.diskstats
+              {{- end }}
       destination:
         server: 'https://kubernetes.default.svc'
         namespace: '{{target.path.basename}}'
