--- a/infra/config/application.yaml
+++ b/infra/config/application.yaml
@@ -19,6 +19,9 @@ spec:
               revision: main
               directories:
                 - path: infra/config/{{target.path.basename}}/*/*
+                # Add an exclude condition
+                - path: infra/config/{{target.path.basename}}/monitoring/prometheus-stack
+                  exclude: true
   template:
     metadata:
       name: '{{app.path.basename}}-{{target.path.basename}}'
@@ -37,28 +40,6 @@ spec:
           values: |-
             app:
               environment: {{target.path.basename}}
-              {{- if eq .app.path.basename "prometheus-stack" }}
-              prometheusNodeExporter:
-                hostNetwork: false
-                hostPort: false
-                tolerations:
-                  - key: "node-role.kubernetes.io/master"
-                    operator: "Exists"
-                    effect: "NoSchedule"
-                  - key: "node-role.kubernetes.io/control-plane"
-                    operator: "Exists"
-                    effect: "NoSchedule"
-                service:
-                  port: 9101
-                  targetPort: 9101
-                port: 9101
-                extraArgs:
-                  - --web.listen-address=:9101
-                  - --collector.disable-defaults
-                  - --collector.cpu
-                  - --collector.memory
-                  - --collector.diskstats
-              {{- end }}
       destination:
         server: 'https://kubernetes.default.svc'
         namespace: '{{target.path.basename}}'
