--- a/infra/config/application.yaml
+++ b/infra/config/application.yaml
@@ -45,7 +45,7 @@ spec:
         namespace: '{{target.path.basename}}'
       syncPolicy:
         automated:
-          prune: true
-          selfHeal: true
+          prune: false
+          selfHeal: false
         syncOptions:
           - CreateNamespace=true
