Fix prometheus-node-exporter extraArgs: use --collector.meminfo instead of --collector.memory

--- a/infra/addons/prometheus-node-exporter/values.yaml
+++ b/infra/addons/prometheus-node-exporter/values.yaml
@@ -15,7 +15,7 @@ prometheus-node-exporter:
   extraArgs:
     - --collector.disable-defaults
     - --collector.cpu
-    - --collector.memory
+    - --collector.meminfo
     - --collector.diskstats
   # env:
   #   - name: HOST_IP
