Update ingress with force-ssl-redirect

--- a/infra/addons/ingress/values.yaml
+++ b/infra/addons/ingress/values.yaml
@@ -26,6 +26,7 @@ ingressClass: nginx
 # Advanced ingress annotations
 annotations:
   nginx.ingress.kubernetes.io/ssl-redirect: "true"
+  nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
   nginx.ingress.kubernetes.io/proxy-body-size: "50m"
   nginx.ingress.kubernetes.io/proxy-connect-timeout: "300"
   nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
