--- a/infra/config/dev/app/ingress/values.yaml
+++ b/infra/config/dev/app/ingress/values.yaml
@@ -9,3 +9,4 @@ tls:
   secretName: sharkapp-tls-cert-dev
 annotations:
   nginx.ingress.kubernetes.io/ssl-redirect: "false"
+  nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
