Move prometheus-node-exporter to excluded directory to prevent deployment

--- a/infra/addons/prometheus-stack/values.yaml
+++ b/infra/addons/prometheus-stack/values.yaml
@@ -67,7 +67,12 @@ grafana:
         tracesToMetrics:
           datasourceUid: "prometheus"
 prometheus-node-exporter:
-  enabled: false
+  enabled: true
+  extraArgs:
+    - --collector.disable-defaults
+    - --collector.cpu
+    - --collector.meminfo
+    - --collector.diskstats
 app:
   serviceMonitors:
     - name: sharkapp-backend
